welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: type mismatch;
 found   : Unit
 required: Int
if (noDoubles) {if (die1 == die2) 
                ^