welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
if (noDoubles) {if (die1 == die2) 
	{(die1 + 1) %7 + die2}
	}
else {return die1 + die2}
}